# riffcpp

./: .ccls  .clang-format  .cquery  .gitignore  CMakeLists.txt  ConfigureDeb.cmake  Doxyfile  LICENSE  README.md  appveyor.yml
.github/workflows/: continuous-integration.yml
cmake/: RiffCppConfig.cmake.in  riffcpp-config.cmake.in
debian/: changelog.in  control.in  copyright.in  libriffcpp-utils.install
include/: riffcpp.hpp
include/riffcpp/: riffcpp.hpp
packaging/: make-deb.sh
src/: Error.cpp  riffcpp.cpp  test.cpp
tests/: CMakeLists.txt  common.h  common.hpp  minimal1.cpp  minimal2.cpp  test1.cpp  test2.cpp
